availability fix